added start stop and compile_code

--- a/public/index.html
+++ b/public/index.html
@@ -23,16 +23,16 @@
     </div>
 
     <!-- Game scripts -->
-    <script src="../src/utils/helpers.js"></script>
-    <script src="../src/map/Tile.js"></script>
-    <script src="../src/map/Map.js"></script>
-    <script src="../src/entities/Entity.js"></script>
-    <script src="../src/entities/Unit.js"></script>
-    <script src="../src/game/Config.js"></script>
-    <script src="../src/game/Camera.js"></script>
-    <script src="../src/game/InputHandler.js"></script>
-    <script src="../src/game/Renderer.js"></script>
-    <script src="../src/game/Game.js"></script>
+    <script src="/src/utils/helpers.js"></script>
+    <script src="/src/map/Tile.js"></script>
+    <script src="/src/map/Map.js"></script>
+    <script src="/src/entities/Entity.js"></script>
+    <script src="/src/entities/Unit.js"></script>
+    <script src="/src/game/Config.js"></script>
+    <script src="/src/game/Camera.js"></script>
+    <script src="/src/game/InputHandler.js"></script>
+    <script src="/src/game/Renderer.js"></script>
+    <script src="/src/game/Game.js"></script>
     <script>
         // Initialize the game when the window loads
         window.onload = function() {
