backend server with multiplayer on same map

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Massive RTS Game</title>
-    <meta http-equiv="refresh" content="0;url=public/index.html">
+    <meta http-equiv="refresh" content="0;url=http://localhost:3000">
 </head>
 <body>
-    <p>Redirecting to <a href="public/index.html">the game</a>...</p>
+    <p>Redirecting to <a href="http://localhost:3000">the game</a>...</p>
 </body>
 </html> 
