--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Massive RTS Game</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Socket.IO client library -->
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 </head>
 <body>
     <div class="game-container">
@@ -32,6 +34,7 @@
     <script src="/src/game/Camera.js"></script>
     <script src="/src/game/InputHandler.js"></script>
     <script src="/src/game/Renderer.js"></script>
+    <script src="/src/game/Multiplayer.js"></script>
     <script src="/src/game/Game.js"></script>
     <script>
         // Initialize the game when the window loads
