map scales to player count at start of game

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
     <script src="/src/map/Map.js"></script>
     <script src="/src/entities/Entity.js"></script>
     <script src="/src/entities/Unit.js"></script>
+    <script src="/src/entities/Building.js"></script>
     <script src="/src/game/Config.js"></script>
     <script src="/src/game/Camera.js"></script>
     <script src="/src/game/InputHandler.js"></script>
