messing with grok suggestions on scaling

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
 
     <!-- Game scripts -->
     <script src="/src/utils/helpers.js"></script>
+    <script src="/src/utils/Quadtree.js"></script>
     <script src="/src/map/Tile.js"></script>
     <script src="/src/map/Map.js"></script>
     <script src="/src/entities/Entity.js"></script>
